se modifica footer y otros elementos

--- a/faqs.html
+++ b/faqs.html
@@ -1,127 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bohemias Store</title>
+    <!--Bootstrap-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
+    <!--Mi CSS-->
+    <link rel="stylesheet" href="style/css/styles.css" />
+    <!--Google fonts-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,900;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bohemias Store</title>
-  <!--Bootstrap-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
-  <!--Mi CSS-->
-  <link rel="stylesheet" href="style/css/styles.css" />
-  <!--Google fonts-->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,900;1,400&display=swap"
-    rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  </head>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg">
+        <div class="container">
+          <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"
+              ><i class="fas fa-hamburger"></i
+            ></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" href="index.html">INICIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="remeras.html">REMERAS</a>
+              </li>
 
-</head>
+              <li class="nav-item">
+                <a class="nav-link" href="abrigos.html">ABRIGOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="jeans.html">JEANS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="zapatos.html">CALZADOS</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
 
-<body>
-  <header>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container">
-      <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-        >
-        <span class="navbar-toggler-icon"
-        ><i class="fas fa-hamburger"></i
-          ></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" href="index.html">INICIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="remeras.html">REMERAS</a>
-            </li>
-            
-            <li class="nav-item">
-              <a class="nav-link" href="abrigos.html">ABRIGOS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="jeans.html">JEANS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="zapatos.html">CALZADOS</a>
-            </li>
-          </ul>
+    <section class="nosotros">
+      <div class="container py-5">
+        <div class="row justify-content-center">
+          <div class="col-12 text-center py-5">
+            <h2 class="subtitulo"><span>Devoluciones</span></h2>
+            <h3 class="titulo">Trabajamos con</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
+              error laborum ipsum. Nesciunt blanditiis illum necessitatibus
+              fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo
+              excepturi laborum quod. Doloremque in ad voluptate similique quasi
+              eaque quisquam consequatur repudiandae, saepe, magni, molestias
+              neque sapiente dolores corporis recusandae distinctio dolore
+              tempora aut?
+            </p>
+          </div>
+          <div class="col-12 text-center py-5">
+            <h2 class="subtitulo"><span>Politicas de cambio</span></h2>
+            <h3 class="titulo">Trabajamos con</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
+              error laborum ipsum. Nesciunt blanditiis illum necessitatibus
+              fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo
+              excepturi laborum quod. Doloremque in ad voluptate similique quasi
+              eaque quisquam consequatur repudiandae, saepe, magni, molestias
+              neque sapiente dolores corporis recusandae distinctio dolore
+              tempora aut?
+            </p>
+          </div>
+          <div class="col-12 text-center py-5">
+            <h2 class="subtitulo"><span>¿Como comprar?</span></h2>
+            <h3 class="titulo">Trabajamos con</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
+              error laborum ipsum. Nesciunt blanditiis illum necessitatibus
+              fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo
+              excepturi laborum quod. Doloremque in ad voluptate similique quasi
+              eaque quisquam consequatur repudiandae, saepe, magni, molestias
+              neque sapiente dolores corporis recusandae distinctio dolore
+              tempora aut?
+            </p>
+          </div>
+          <div class="col-12 text-center py-5">
+            <h2 class="subtitulo"><span>Formas de pago</span></h2>
+            <h3 class="titulo">Trabajamos con</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
+              error laborum ipsum. Nesciunt blanditiis illum necessitatibus
+              fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo
+              excepturi laborum quod. Doloremque in ad voluptate similique quasi
+              eaque quisquam consequatur repudiandae, saepe, magni, molestias
+              neque sapiente dolores corporis recusandae distinctio dolore
+              tempora aut?
+            </p>
+          </div>
+          <div class="col-12 text-center py-5">
+            <h2 class="subtitulo"><span>Costos de Envío</span></h2>
+            <h3 class="titulo">Trabajamos con</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
+              error laborum ipsum. Nesciunt blanditiis illum necessitatibus
+              fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo
+              excepturi laborum quod. Doloremque in ad voluptate similique quasi
+              eaque quisquam consequatur repudiandae, saepe, magni, molestias
+              neque sapiente dolores corporis recusandae distinctio dolore
+              tempora aut?
+            </p>
+          </div>
+          <div class="col-12 text-center py-5">
+            <h2 class="subtitulo"><span>¿Quienes somos?</span></h2>
+            <h3 class="titulo">Camila</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
+              error laborum ipsum. Nesciunt blanditiis illum necessitatibus
+              fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo
+              excepturi laborum quod. Doloremque in ad voluptate similique quasi
+              eaque quisquam consequatur repudiandae, saepe, magni, molestias
+              neque sapiente dolores corporis recusandae distinctio dolore
+              tempora aut?
+            </p>
+          </div>
         </div>
       </div>
-    </nav>
-  </header>
-  
-  
-  
-  
-  <section class="nosotros">
-    <div class="container py-5">
-      <div class="row justify-content-center">
-        <div class="col-12 text-center py-5">
-          <h2 class="subtitulo"><span>Devoluciones</span></h2>
-          <h3 class="titulo">Trabajamos con</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam error laborum ipsum. Nesciunt blanditiis
-            illum necessitatibus fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo excepturi laborum quod.
-            Doloremque in ad voluptate similique quasi eaque quisquam consequatur repudiandae, saepe, magni, molestias
-            neque sapiente dolores corporis recusandae distinctio dolore tempora aut?</p>
-        </div>
-        <div class="col-12 text-center py-5">
-          <h2 class="subtitulo"><span>Politicas de cambio</span></h2>
-          <h3 class="titulo">Trabajamos con</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam error laborum ipsum. Nesciunt blanditiis
-            illum necessitatibus fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo excepturi laborum quod.
-            Doloremque in ad voluptate similique quasi eaque quisquam consequatur repudiandae, saepe, magni, molestias
-            neque sapiente dolores corporis recusandae distinctio dolore tempora aut?</p>
-        </div>
-        <div class="col-12 text-center py-5">
-          <h2 class="subtitulo"><span>¿Como comprar?</span></h2>
-          <h3 class="titulo">Trabajamos con</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam error laborum ipsum. Nesciunt blanditiis
-            illum necessitatibus fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo excepturi laborum quod.
-            Doloremque in ad voluptate similique quasi eaque quisquam consequatur repudiandae, saepe, magni, molestias
-            neque sapiente dolores corporis recusandae distinctio dolore tempora aut?</p>
-        </div>
-        <div class="col-12 text-center py-5">
-          <h2 class="subtitulo"><span>Formas de pago</span></h2>
-          <h3 class="titulo">Trabajamos con</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam error laborum ipsum. Nesciunt blanditiis
-            illum necessitatibus fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo excepturi laborum quod.
-            Doloremque in ad voluptate similique quasi eaque quisquam consequatur repudiandae, saepe, magni, molestias
-            neque sapiente dolores corporis recusandae distinctio dolore tempora aut?</p>
-        </div>
-        <div class="col-12 text-center py-5">
-          <h2 class="subtitulo"><span>Costos de Envío</span></h2>
-          <h3 class="titulo">Trabajamos con</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam error laborum ipsum. Nesciunt blanditiis
-            illum necessitatibus fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo excepturi laborum quod.
-            Doloremque in ad voluptate similique quasi eaque quisquam consequatur repudiandae, saepe, magni, molestias
-            neque sapiente dolores corporis recusandae distinctio dolore tempora aut?</p>
-        </div>
-        <div class="col-12 text-center py-5">
-          <h2 class="subtitulo"><span>¿Quienes somos?</span></h2>
-          <h3 class="titulo">Camila</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam error laborum ipsum. Nesciunt blanditiis
-            illum necessitatibus fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo excepturi laborum quod.
-            Doloremque in ad voluptate similique quasi eaque quisquam consequatur repudiandae, saepe, magni, molestias
-            neque sapiente dolores corporis recusandae distinctio dolore tempora aut?</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
+    </section>
 
     <!--Footer-->
     <footer class="footer">
@@ -130,10 +162,10 @@
           <div class="col-lg-9 m-auto text-center">
             <h1>Recibí nuestras promociones</h1>
             <input
-            type="email"
-            name="email"
-            id="email"
-            placeholder="Ingresá tu email"
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Ingresá tu email"
             />
             <button class="btn1">Suscribir!</button>
           </div>
@@ -150,12 +182,14 @@
                     >
                   </li>
                   <li>
-                    <a class="footer__quickLinks__a" href="#"
+                    <a class="footer__quickLinks__a" href="faqs.html"
                       >Politicas de cambio</a
                     >
                   </li>
                   <li>
-                    <a class="footer__quickLinks__a" href="#">Cómo comprar</a>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Cómo comprar</a
+                    >
                   </li>
                 </ul>
               </div>
@@ -163,13 +197,17 @@
                 <h5 class="pb-3">Ayuda</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <li>
-                    <a class="footer__quickLinks__a" href="#">Devoluciones</a>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Devoluciones</a
+                    >
                   </li>
                   <li>
-                    <a class="footer__quickLinks__a" href="#">Formas de pago</a>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Formas de pago</a
+                    >
                   </li>
                   <li>
-                    <a class="footer__quickLinks__a" href="#"
+                    <a class="footer__quickLinks__a" href="faqs.html"
                       >Costos de envío</a
                     >
                   </li>
@@ -179,13 +217,19 @@
                 <h5 class="pb-3">Nosotros</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <li>
-                    <a class="footer__quickLinks__a" href="#">Quienes somos</a>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Quienes somos</a
+                    >
                   </li>
                   <li>
-                    <a class="footer__quickLinks__a" href="#">Contacto</a>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Contacto</a
+                    >
                   </li>
                   <li>
-                    <a class="footer__quickLinks__a" href="#">Visitanos</a>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Visitanos</a
+                    >
                   </li>
                 </ul>
               </div>
