--- a/remeras.html
+++ b/remeras.html
@@ -1,173 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bohemias Store</title>
+    <!--Bootstrap-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
+    <!--Mi CSS-->
+    <link rel="stylesheet" href="style/css/styles.css" />
+    <!--Google fonts-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,900;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bohemias Store</title>
-  <!--Bootstrap-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
-  <!--Mi CSS-->
-  <link rel="stylesheet" href="style/css/styles.css" />
-  <!--Google fonts-->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,900;1,400&display=swap"
-    rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  </head>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-</head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg">
+        <div class="container">
+          <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"
+              ><i class="fas fa-hamburger"></i
+            ></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" href="index.html">INICIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="remeras.html">REMERAS</a>
+              </li>
 
-<body>
-  <header>
-    <nav class="navbar navbar-expand-lg">
+              <li class="nav-item">
+                <a class="nav-link" href="abrigos.html">ABRIGOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="jeans.html">JEANS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="zapatos.html">CALZADOS</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <section class="hero">
       <div class="container">
-      <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-        >
-        <span class="navbar-toggler-icon"
-        ><i class="fas fa-hamburger"></i
-          ></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" href="index.html">INICIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="remeras.html">REMERAS</a>
-            </li>
-            
-            <li class="nav-item">
-              <a class="nav-link" href="abrigos.html">ABRIGOS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="jeans.html">JEANS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="zapatos.html">CALZADOS</a>
-            </li>
-          </ul>
+        <div class="text-light d-flex flex-column h-100 justify-content-center">
+          <h1>Disfrutá Bohemias</h1>
         </div>
       </div>
-    </nav>
-  </header>
+    </section>
 
-  <section class="hero">
-    <div class="container">
-      <div class="text-light d-flex flex-column h-100 justify-content-center">
-        <h1>Disfrutá Bohemias</h1>
+    <section class="remeras">
+      <div class="container py-5">
+        <h2 class="text-center">Nuestras Remeras</h2>
+        <div class="row py-5">
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Remeras/foto10.jpg"
+              alt="img de una remera"
+              class="img-fluid"
+            />
+            <h4>Remeras</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Remeras/foto5.jpg"
+              alt="img de una remera"
+              class="img-fluid"
+            />
+            <h4>Remeras</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Remeras/foto2.jpg"
+              alt="img de una remera"
+              class="img-fluid"
+            />
+            <h4>Remeras</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Remeras/foto9.jpg"
+              alt="img de una remera"
+              class="img-fluid"
+            />
+            <h4>Remeras</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+        </div>
+        <h2 class="text-center">Nuevos ingresos</h2>
+        <div class="row py-5">
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Remeras/foto4.jpg"
+              alt="img de una remera"
+              class="img-fluid"
+            />
+            <h4>Remeras</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Remeras/foto3.jpg"
+              alt="img de una remera"
+              class="img-fluid"
+            />
+            <h4>Remeras</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Remeras/foto4.jpg"
+              alt="img de una remera"
+              class="img-fluid"
+            />
+            <h4>Remeras</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+          <div class="col-lg-3 remeras__card">
+            <img
+              src="img/Remeras/foto9.jpg"
+              alt="img de una remera"
+              class="img-fluid"
+            />
+            <h4>Remeras</h4>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-star-o"></i></span>
+            <p>$1.999</p>
+            <button onclick="location.href='productos.html'">Ver</button>
+          </div>
+        </div>
       </div>
-    </div>
-  </section>
-
-  <section class="remeras">
-    <div class="container py-5">
-      <h2 class="text-center">Nuestras Remeras</h2>
-      <div class="row py-5">
-        <div class="col-lg-3 remeras__card">
-          <img src="img/Remeras/foto10.jpg" alt="img de una remera" class="img-fluid" />
-          <h4>Remeras</h4>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star-o"></i></span>
-          <p>$1.999</p>
-          <button onclick="location.href='productos.html'">Ver</button>
-        </div>
-        <div class="col-lg-3 remeras__card">
-          <img src="img/Remeras/foto5.jpg" alt="img de una remera" class="img-fluid" />
-          <h4>Remeras</h4>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star-o"></i></span>
-          <p>$1.999</p>
-          <button onclick="location.href='productos.html'">Ver</button>
-        </div>
-        <div class="col-lg-3 remeras__card">
-          <img src="img/Remeras/foto2.jpg" alt="img de una remera" class="img-fluid" />
-          <h4>Remeras</h4>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star-o"></i></span>
-          <p>$1.999</p>
-          <button onclick="location.href='productos.html'">Ver</button>
-        </div>
-        <div class="col-lg-3 remeras__card">
-          <img src="img/Remeras/foto9.jpg" alt="img de una remera" class="img-fluid" />
-          <h4>Remeras</h4>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star-o"></i></span>
-          <p>$1.999</p>
-          <button onclick="location.href='productos.html'">Ver</button>
-        </div>
-      </div>
-      <h2 class="text-center">Nuevos ingresos</h2>
-      <div class="row py-5">
-        <div class="col-lg-3 remeras__card">
-          <img src="img/Remeras/foto4.jpg" alt="img de una remera" class="img-fluid" />
-          <h4>Remeras</h4>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star-o"></i></span>
-          <p>$1.999</p>
-          <button onclick="location.href='productos.html'">Ver</button>
-        </div>
-        <div class="col-lg-3 remeras__card">
-          <img src="img/Remeras/foto3.jpg" alt="img de una remera" class="img-fluid" />
-          <h4>Remeras</h4>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star-o"></i></span>
-          <p>$1.999</p>
-          <button onclick="location.href='productos.html'">Ver</button>
-        </div>
-        <div class="col-lg-3 remeras__card">
-          <img src="img/Remeras/foto4.jpg" alt="img de una remera" class="img-fluid" />
-          <h4>Remeras</h4>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star-o"></i></span>
-          <p>$1.999</p>
-          <button onclick="location.href='productos.html'">Ver</button>
-        </div>
-        <div class="col-lg-3 remeras__card">
-          <img src="img/Remeras/foto9.jpg" alt="img de una remera" class="img-fluid" />
-          <h4>Remeras</h4>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star"></i></span>
-          <span><i class="fa fa-star-o"></i></span>
-          <p>$1.999</p>
-          <button onclick="location.href='productos.html'">Ver</button>
-        </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
     <!--Footer-->
     <footer class="footer">
@@ -176,10 +216,10 @@
           <div class="col-lg-9 m-auto text-center">
             <h1>Recibí nuestras promociones</h1>
             <input
-            type="email"
-            name="email"
-            id="email"
-            placeholder="Ingresá tu email"
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Ingresá tu email"
             />
             <button class="btn1">Suscribir!</button>
           </div>
@@ -196,12 +236,14 @@
                     >
                   </li>
                   <li>
-                    <a class="footer__quickLinks__a" href="#"
+                    <a class="footer__quickLinks__a" href="faqs.html"
                       >Politicas de cambio</a
                     >
                   </li>
                   <li>
-                    <a class="footer__quickLinks__a" href="#">Cómo comprar</a>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Cómo comprar</a
+                    >
                   </li>
                 </ul>
               </div>
@@ -209,13 +251,17 @@
                 <h5 class="pb-3">Ayuda</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <li>
-                    <a class="footer__quickLinks__a" href="#">Devoluciones</a>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Devoluciones</a
+                    >
                   </li>
                   <li>
-                    <a class="footer__quickLinks__a" href="#">Formas de pago</a>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Formas de pago</a
+                    >
                   </li>
                   <li>
-                    <a class="footer__quickLinks__a" href="#"
+                    <a class="footer__quickLinks__a" href="faqs.html"
                       >Costos de envío</a
                     >
                   </li>
@@ -225,13 +271,19 @@
                 <h5 class="pb-3">Nosotros</h5>
                 <ul class="footer__quickLinks m-0 p-0">
                   <li>
-                    <a class="footer__quickLinks__a" href="#">Quienes somos</a>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Quienes somos</a
+                    >
                   </li>
                   <li>
-                    <a class="footer__quickLinks__a" href="#">Contacto</a>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Contacto</a
+                    >
                   </li>
                   <li>
-                    <a class="footer__quickLinks__a" href="#">Visitanos</a>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Visitanos</a
+                    >
                   </li>
                 </ul>
               </div>
