--- a/abrigos.html
+++ b/abrigos.html
@@ -1,173 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bohemias Store</title>
+    <!--Bootstrap-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
+    <!--Mi CSS-->
+    <link rel="stylesheet" href="style/css/styles.css" />
+    <!--Google fonts-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,900;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bohemias Store</title>
-  <!--Bootstrap-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
-  <!--Mi CSS-->
-  <link rel="stylesheet" href="style/css/styles.css" />
-  <!--Google fonts-->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,900;1,400&display=swap"
-    rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  </head>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg">
+        <div class="container">
+          <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"
+              ><i class="fas fa-hamburger"></i
+            ></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" href="index.html">INICIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="remeras.html">REMERAS</a>
+              </li>
 
-</head>
-
-<body>
-  <header>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container">
-      <a class="navbar-brand fs-1" href="index.html">Bohemias</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-        >
-        <span class="navbar-toggler-icon"
-        ><i class="fas fa-hamburger"></i
-          ></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" href="index.html">INICIO</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="remeras.html">REMERAS</a>
-            </li>
-            
-            <li class="nav-item">
-              <a class="nav-link" href="abrigos.html">ABRIGOS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="jeans.html">JEANS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="zapatos.html">CALZADOS</a>
-            </li>
-          </ul>
+              <li class="nav-item">
+                <a class="nav-link" href="abrigos.html">ABRIGOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="jeans.html">JEANS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="zapatos.html">CALZADOS</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-  </header>
+      </nav>
+    </header>
 
-  <main>
-    <section>
-      
-    </section>
-  </main>
+    <main>
+      <section></section>
+    </main>
 
-
-<!--Footer-->
-<footer class="footer">
-  <div class="container py-5">
-    <div class="row">
-      <div class="col-lg-9 m-auto text-center">
-        <h1>Recibí nuestras promociones</h1>
-        <input
-        type="email"
-        name="email"
-        id="email"
-        placeholder="Ingresá tu email"
-        />
-        <button class="btn1">Suscribir!</button>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-11 m-auto py-5">
+    <!--Footer-->
+    <footer class="footer">
+      <div class="container py-5">
         <div class="row">
-          <div class="col-lg-3 py-3">
-            <h5 class="pb-3">Quick Links</h5>
-            <ul class="footer__quickLinks m-0 p-0">
-              <li>
-                <a class="footer__quickLinks__a" href="faqs.html"
-                  >Preguntas frecuentes</a
-                >
-              </li>
-              <li>
-                <a class="footer__quickLinks__a" href="#"
-                  >Politicas de cambio</a
-                >
-              </li>
-              <li>
-                <a class="footer__quickLinks__a" href="#">Cómo comprar</a>
-              </li>
-            </ul>
+          <div class="col-lg-9 m-auto text-center">
+            <h1>Recibí nuestras promociones</h1>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Ingresá tu email"
+            />
+            <button class="btn1">Suscribir!</button>
           </div>
-          <div class="col-lg-3 py-3">
-            <h5 class="pb-3">Ayuda</h5>
-            <ul class="footer__quickLinks m-0 p-0">
-              <li>
-                <a class="footer__quickLinks__a" href="#">Devoluciones</a>
-              </li>
-              <li>
-                <a class="footer__quickLinks__a" href="#">Formas de pago</a>
-              </li>
-              <li>
-                <a class="footer__quickLinks__a" href="#"
-                  >Costos de envío</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-3 py-3">
-            <h5 class="pb-3">Nosotros</h5>
-            <ul class="footer__quickLinks m-0 p-0">
-              <li>
-                <a class="footer__quickLinks__a" href="#">Quienes somos</a>
-              </li>
-              <li>
-                <a class="footer__quickLinks__a" href="#">Contacto</a>
-              </li>
-              <li>
-                <a class="footer__quickLinks__a" href="#">Visitanos</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-3 py-3">
-            <h5 class="pb-3">Redes</h5>
-            <ul class="footer__quickLinks m-0 p-0">
-              <span>
-                <a href="https://www.facebook.com/bohemiias" target="_blank"
-                  ><i class="footer__quickLinks__redes fab fa-facebook"></i
-                ></a>
-              </span>
-              <span>
-                <a
-                  href="https://www.instagram.com/bohemiias_/"
-                  target="_blank"
-                  ><i class="footer__quickLinks__redes fab fa-instagram"></i
-                ></a>
-              </span>
-            </ul>
+        </div>
+        <div class="row">
+          <div class="col-lg-11 m-auto py-5">
+            <div class="row">
+              <div class="col-lg-3 py-3">
+                <h5 class="pb-3">Quick Links</h5>
+                <ul class="footer__quickLinks m-0 p-0">
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Preguntas frecuentes</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Politicas de cambio</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Cómo comprar</a
+                    >
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-3 py-3">
+                <h5 class="pb-3">Ayuda</h5>
+                <ul class="footer__quickLinks m-0 p-0">
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Devoluciones</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Formas de pago</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Costos de envío</a
+                    >
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-3 py-3">
+                <h5 class="pb-3">Nosotros</h5>
+                <ul class="footer__quickLinks m-0 p-0">
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Quienes somos</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Contacto</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer__quickLinks__a" href="faqs.html"
+                      >Visitanos</a
+                    >
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-3 py-3">
+                <h5 class="pb-3">Redes</h5>
+                <ul class="footer__quickLinks m-0 p-0">
+                  <span>
+                    <a href="https://www.facebook.com/bohemiias" target="_blank"
+                      ><i class="footer__quickLinks__redes fab fa-facebook"></i
+                    ></a>
+                  </span>
+                  <span>
+                    <a
+                      href="https://www.instagram.com/bohemiias_/"
+                      target="_blank"
+                      ><i class="footer__quickLinks__redes fab fa-instagram"></i
+                    ></a>
+                  </span>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</footer>
-<script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-  crossorigin="anonymous"
-></script>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+      crossorigin="anonymous"
+    ></script>
 
-<script
-  src="https://kit.fontawesome.com/7d4193cf05.js"
-  crossorigin="anonymous"
-></script>
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/7d4193cf05.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
