Se trabaja en la sección criticas

--- a/index.html
+++ b/index.html
@@ -296,6 +296,71 @@
         </div>
       </section>
 
+      <section class="criticas">
+        <h1 class="criticas__titulo text-center">Nuestras <span>Clientas</span></h1>
+        <div class="criticas__contenedor">
+          <div class="criticas__contenedor__ind">
+            <div class="criticas__contenedor__estrellas">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
+                error laborum ipsum. Nesciunt blanditiis illum necessitatibus
+                fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo</p>
+            </div>
+            <div class="criticas__contenedor__foto">
+              <img src="img/Iconos/pic-1.png" alt="img de una persona">
+              <div>
+                <h3>Camila</h3>
+                <span>Disfruta Bohemias</span>
+              </div>
+            </div>
+            <span class="criticas__contenedor__icono fas fa-quote-right"></span>
+          </div>
+          <div class="criticas__contenedor__ind">
+            <div class="criticas__contenedor__estrellas">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
+                error laborum ipsum. Nesciunt blanditiis illum necessitatibus
+                fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo</p>
+            </div>
+            <div class="criticas__contenedor__foto">
+              <img src="img/Iconos/pic-2.png" alt="img de una persona">
+              <div>
+                <h3>Lucia</h3>
+                <span>Disfruta Bohemias</span>
+              </div>
+            </div>
+            <span class="criticas__contenedor__icono fas fa-quote-right"></span>
+          </div>
+          <div class="criticas__contenedor__ind">
+            <div class="criticas__contenedor__estrellas">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam
+                error laborum ipsum. Nesciunt blanditiis illum necessitatibus
+                fugiat, laudantium cumque ratione veritatis ipsam dolorem nemo</p>
+            </div>
+            <div class="criticas__contenedor__foto">
+              <img src="img/Iconos/pic-3.png" alt="img de una persona">
+              <div>
+                <h3>Liliana</h3>
+                <span>Disfruta Bohemias</span>
+              </div>
+            </div>
+            <span class="criticas__contenedor__icono fas fa-quote-right"></span>
+          </div>
+        </div>
+      </section>
       <section class="contacto py-5">
         <div class="container py-5">
           <div class="row">
